@@ -1,0 +1,13 @@
+@comment $NetBSD: PLIST,v 1.1.1.1 2003/09/10 21:21:30 manu Exp $
+bin/fondu
+bin/ufond
+bin/showfond
+bin/dfont2res
+bin/tobin
+bin/frombin
+man/man1/fondu.1
+man/man1/ufond.1
+man/man1/showfond.1
+man/man1/dfont2res.1
+man/man1/tobin.1
+man/man1/frombin.1
